# indictrans2-onnx-export

./: .gitignore  03_validate_parity.py  04_quantize_int8.py  BENCHMARKS.md  BENCHMARKS_1B.md  EXPORT_ISSUES.md  LIVE_BENCHMARKS.md  Makefile  ONNX_SIZE_OPTIMIZATION.md  README.md  ROADMAP.md  index.html  it2_onnx_wrappers.py  onnx-components.html  pyproject.toml  quantization_issues.md  requirements.txt
assets/: index-BAy2JPsn.js  index-BKCihoxG.js  index-BgrXS0dD.css  index-Bhesnz1g.js  index-BqSW3dvA.js  index-D2b5uKJ-.css  index-DgM6VwEh.js  index-DidnCkSy.css  index-DyftAhhb.js  index-hhM-tNSb.css
browser-lab/: README.md  app.js  benchmark.html  benchmark.js  index.html  server.py  style.css  translator.js  transliterate.js
dashboard/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
fixtures/: benchmark-en-indic-1b-fp16-mismatches.json  benchmark-en-indic-1b-fp16.json  benchmark-en-indic-1b-int8-mismatches.json  benchmark-en-indic-1b-int8.json  benchmark-en-indic-1b-q4f16.json  benchmark-en-indic-fp16-mismatches.json  benchmark-en-indic-fp16.json  benchmark-en-indic-int8-mismatches.json  benchmark-en-indic-int8.json  benchmark-en-indic-q4f16-mismatches.json  benchmark-en-indic-q4f16.json  benchmark-indic-en-1b-fp16-mismatches.json  benchmark-indic-en-1b-fp16.json  benchmark-indic-en-1b-int8-mismatches.json  benchmark-indic-en-1b-int8.json  benchmark-indic-en-1b-q4f16-mismatches.json  benchmark-indic-en-1b-q4f16.json  benchmark-indic-en-fp16-mismatches.json  benchmark-indic-en-fp16.json  benchmark-indic-en-int8-mismatches.json  (+27 more)
(+60 files in other folders)
