[project]
name = "indictrans2-onnx-export"
version = "0.1.0"
description = "Export IndicTrans2 to browser-ready ONNX for local-voice-chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub==0.36.2",
    "indic-nlp-library==0.92",
    "indictranstoolkit==1.1.1",
    "numpy==2.4.6",
    "onnx==1.22.0",
    "onnxconverter-common==1.16.0",
    "onnxruntime==1.27.0",
    "onnxscript==0.7.1",
    "optimum[onnxruntime]==2.1.0",
    "sacremoses==0.1.1",
    "sentencepiece==0.2.1",
    "tokenizers==0.22.2",
    "torch==2.12.1",
    "tqdm==4.68.3",
    "transformers==4.57.6",
]
